Fix broken styles for shipping cart in medium

--- a/plugins/woocommerce-blocks/assets/js/blocks/cart/style.scss
+++ b/plugins/woocommerce-blocks/assets/js/blocks/cart/style.scss
@@ -95,6 +95,7 @@
 	padding-top: 0;
 }
 
+.is-medium,
 .is-small,
 .is-mobile {
 	.wc-block-cart-item__total {
@@ -106,8 +107,8 @@
 		margin: 0;
 	}
 	.wc-block-components-shipping-rates-control
-	.wc-block-components-radio-control__option {
-		padding: 0 0 0 em($gap-huge);
+		.wc-block-components-radio-control__option {
+		padding-left: em($gap-huge);
 	}
 }
 
@@ -145,7 +146,9 @@
 		margin-top: 0;
 
 		.wc-block-components-shipping-calculator,
-		.wc-block-components-shipping-rates-control__package:not(.wc-block-components-panel) {
+		.wc-block-components-shipping-rates-control__package:not(
+				.wc-block-components-panel
+			) {
 			padding-left: $gap;
 			padding-right: $gap;
 		}
@@ -189,7 +192,9 @@
 	.wp-block-woocommerce-cart-items-block {
 		box-sizing: border-box;
 		margin: 0;
-		padding-right: math.percentage(math.div($gap-largest, 1060px)); // ~1060px is the default width of the content area in Storefront.
+		padding-right: math.percentage(
+			math.div($gap-largest, 1060px)
+		); // ~1060px is the default width of the content area in Storefront.
 		width: 65%;
 		min-height: 10em;
 	}
